--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ body {
   justify-content: space-between;
   align-content: center;
   flex-direction: row;
-  margin-bottom: 20px;
 }
 
 .header__nav {
@@ -106,4 +105,11 @@ body {
   background-position: center;
   margin-right: 8px;
   content: "";
+}
+
+.header__secend-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }/*# sourceMappingURL=main.css.map */
