--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
 
 .site__header {
   padding-top: 32px;
+  padding-bottom: 25px;
 }
 
 .header__wrapper {
@@ -133,4 +134,46 @@ body {
   font-weight: 500;
   line-height: normal;
   text-decoration: none;
+}
+
+.fueltime__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-content: inherit;
+  flex-direction: row;
+}
+
+.fueltime__list {
+  display: flex;
+  justify-content: space-between;
+  align-content: inherit;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.fueltime__title {
+  max-width: 738px;
+  width: 100%;
+  margin: 0;
+  margin-bottom: 24px;
+  color: #12142d;
+  font-family: "Geologica Cursive";
+  font-size: 68px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 81.6px */
+}
+
+.fueltime__info {
+  width: 526px;
+  display: inline-block;
+  margin-bottom: 48px;
+  color: #12142d;
+  font-family: "Geologica Cursive";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 25.2px */
 }/*# sourceMappingURL=main.css.map */
