--- a/scss/blocks/_fueltime.scss
+++ b/scss/blocks/_fueltime.scss
@@ -1,4 +1,4 @@
-@mixsin m {
+@mixin m {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -22,10 +22,24 @@
 .fueltime__title {
     max-width: 738px;
     width: 100%;
+    margin: 0;
+    margin-bottom: 24px;
     color: #12142d;
     font-family: "Geologica Cursive";
     font-size: 68px;
     font-style: normal;
     font-weight: 600;
     line-height: 120%; /* 81.6px */
+}
+
+.fueltime__info {
+    width: 526px;
+    display: inline-block;
+    margin-bottom: 48px;
+    color: #12142d;
+    font-family: "Geologica Cursive";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 25.2px */
 }
